# Diverse-Conventions

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.org  config.py  diverse_trainer.py  hanabi_agent.py  index.html  line_script.sh  numline_cli.py  oracle_trainer.py  partner_agents.py  pop_trainer.py  serial_trainer.py  setup.py  stat_trainer.py  style.css  testing.py  trainer.py  tree_cli.py  tree_script.sh  tree_trainer.py  xhanabi_trainer.py  xnumline_trainer.py  xtrainer.py  xtree_trainer.py
CoMeDi/: __init__.py  setup.py
CoMeDi/envs/: balance_beam_env.py  hanabi_env.py
CoMeDi/overcooked_flask/: flask_app.py
CoMeDi/pantheonrl_extension/: vectoragent.py  vectorenv.py
CoMeDi/src/: CMakeLists.txt
CoMeDi/src/overcooked2_env/: CMakeLists.txt
CoMeDi/train/: bc_vs_bc.py  env_utils.py  mp_cbr.sh  partner_agents.py  stat_trainer.py  train_mp.sh
DMAPPO/: dr_mappo.py  main_player.py  poploss.py
MAPPO/: base_runner.py  hanabi_agent.py  hanabi_runner.py  main_player.py  rMAPPOPolicy.py  r_actor_critic.py  r_mappo.py
MAPPO/utils/: act.py  distributions.py  mlp.py  popart.py  shared_buffer.py  util.py  valuenorm.py
PopMAPPO/: pop_mappo.py  pop_player.py
StatD/: simultaneous.py
XD/: MCPolicy.py  serial.py  xd.py  xd_player.py
XMAPPO/: x_player.py  xmappo.py
envs/: overcooked2_env.py  overcooked2_reimplement.py
hanabi_env/: __init__.py  hanabi_env.py
js/: app.js
numline_env/: __init__.py  numline_agent.py  numline_env.py
oracle/: mappo.py  oracle_player.py
overcooked_env/: __init__.py  flask_app.py  overcooked_env.py  static
overcooked_env/static/: index.html
overcooked_flask/: flask_app.py  overcooked_env.py  overcooked_utils.py  package.json
overcooked_flask/static/: index.html
pantheonrl_extension/: agents.py  asyncvectorenv.py  vectorobservation.py
plots/: plot_results.py  user_study_plot.py
src/balance_beam_env/: CMakeLists.txt  bindings.cpp  init.hpp  mgr.cpp  rng.hpp  sim.cpp  sim.hpp
src/hanabi_env/: CMakeLists.txt  bindings.cpp  init.hpp  mgr.hpp  rng.hpp  sim.cpp  sim.hpp
src/overcooked2_env/: bindings.cpp  init.hpp  (+4 more)
train/: adap_cbr.sh  best_response_trainer.py  config.py  env_utils.py  flask_port.sh  gate_trainer.py  mp_cbr.sh  mp_gate.sh  partner_agents.py  serial_trainer.py  stat_trainer.py  test_all.sh  test_vs_bc.py  testing.py  tfjs_to_torch.py  torch_to_tfjs.py  train_adap.sh  train_mp.sh  train_sp.sh  train_xp.sh  trainer.py  xp_cbr.sh
tree_env/: __init__.py  tree_agent.py  tree_env.py
(+482 files in other folders)
